--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^3.0.18",
+    "@ai-sdk/mcp": "^1.0.16",
     "@met4citizen/talkinghead": "^1.7.0",
+    "@modelcontextprotocol/sdk": "^1.25.3",
+    "@pipedream/sdk": "^2.3.5",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
