--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9245",
+    "dev": "next dev -p 9245",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
