feat: Implement custom avatar generation from photos, integrating it into settings and the avatar display.

--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,12 @@ ehthumbs.db
 Desktop.ini
 
 # -----------------------------------------------------------------------------
+# Python / Avatar Scripts
+# -----------------------------------------------------------------------------
+scripts/.venv/
+scripts/face_landmarker.task
+
+# -----------------------------------------------------------------------------
 # Environment & Secrets
 # -----------------------------------------------------------------------------
 .env
